--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.16.2",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
+    "react-transition-group": "^1.2.0",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
     "redux-thunk": "^2.2.0"
